[metadata]
name = ox-api-client
version = 2.0.0
author = Cezar Pokorski
author_email = cezar@openx.com
description = A new Python client for the OpenX Exchange API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openx/ox-api-client-py
project_urls =
    Bug Tracker = https://github.com/openx/ox-api-client-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ox_api_cli
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ox_api_cli
